--- a/package.json
+++ b/package.json
@@ -1,7 +1,34 @@
 {
-  "name": "crud-mixins",
+  "name": "nestjs-crud-mixins",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A mixins-based CRUD library for NestJS RESTful APIs with typeorm.",
+  "author": "Mazene ZERGUINE <mmazenezerguine@gmail.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/Mazene-ZERGUINE/nest-crud-mixins",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Mazene-ZERGUINE/nest-crud-mixins"
+  },
+  "bugs": {
+    "url": "https://github.com/Mazene-ZERGUINE/nest-crud-mixins/issues"
+  },
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/src/index.js",
+      "require": "./dist/src/index.js",
+      "types": "./dist/src/index.d.ts"
+    },
+    "./core": {
+      "import": "./dist/src/core/index.js",
+      "require": "./dist/src/core/index.js",
+      "types": "./dist/src/core/index.d.ts"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rimraf dist && tsc",
     "test": "jest",
@@ -14,9 +41,6 @@
     "prepare": "husky"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@eslint/js": "^9.21.0",
     "@nestjs/common": "^11.0.11",
@@ -26,8 +50,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2",
-    "typeorm": "^0.3.21"
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.5",
@@ -45,5 +68,8 @@
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "peerDependencies": {
+    "typeorm": "^0.3.21"
   }
 }
